@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.08-08
-Date: 2010-4-3
+Version: 0.08-08.01
+Date: 2010-4-5
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Yu-Sung Su <ys463@columbia.edu>, Masanao
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, Matrix, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2010-04-03 15:19:38 UTC; yusung
+Packaged: 2010-04-11 04:42:14 UTC; yusung
 Repository: CRAN
-Date/Publication: 2010-04-03 17:42:42
+Date/Publication: 2010-04-11 06:23:17
